--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "express-validator": "^6.3.0",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
