--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "author": "George Kephart",
   "license": "Apache 2",
   "dependencies": {
+    "crypto": "^1.0.1",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-validator": "^6.3.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
