--- a/package.json
+++ b/package.json
@@ -10,19 +10,25 @@
   },
   "keywords": [],
   "author": "George Kephart",
-  "license": "Apache 2",
+  "license": "Apache-2.0",
+  "repository": "",
   "dependencies": {
     "crypto": "^1.0.1",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-validator": "^6.3.0",
     "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "ts-node": "^8.5.4"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
     "@types/morgan": "^1.7.35",
     "@types/mysql2": "github:types/mysql2",
+    "@types/passport": "^1.0.2",
+    "@types/passport-local": "^1.0.33",
     "mysql2": "^1.6.5",
     "nodemon": "^1.18.11",
     "typescript": "^3.5.3"
