--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     volumes:
       - passport-local:/var/lib/mysql
     env_file:
-      - ./docker-compose.env
+      - ./.env
     command: --default-authentication-plugin=mysql_native_password
     ports:
       - 3306:3306
