I am now able to enforce that a user is logged in using JWT tokens

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "author": "George Kephart",
   "license": "Apache-2.0",
   "dependencies": {
+    "@types/jsonwebtoken": "^8.3.7",
     "argon2": "^0.25.1",
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
