--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
   "author": "George Kephart",
   "license": "Apache-2.0",
   "dependencies": {
+    "@types/express-session": "^1.15.16",
     "@types/jsonwebtoken": "^8.3.7",
     "argon2": "^0.25.1",
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "express-validator": "^6.3.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
