--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "express-session": "^1.17.0",
     "express-validator": "^6.3.0",
     "jsonwebtoken": "^8.5.1",
+    "memorystore": "^1.6.1",
     "morgan": "^1.9.1",
     "node-ts": "^5.0.3",
     "passport": "^0.4.0",
