--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "author": "George Kephart",
   "license": "Apache-2.0",
   "dependencies": {
-
+    "@types/uuid": "^3.4.7",
     "argon2": "^0.25.1",
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
@@ -40,10 +40,10 @@
     "jsonwebtoken": "^8.5.1",
     "memorystore": "^1.6.1",
     "morgan": "^1.9.1",
-
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "ts-node": "^8.5.4"
+    "ts-node": "^8.5.4",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.10.0",
