--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/uuid": "^3.4.7",
     "argon2": "^0.25.1",
     "crypto": "^1.0.1",
+    "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
@@ -46,17 +47,18 @@
     "uuid": "^3.4.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.10.0",
-    "@typescript-eslint/parser": "^2.10.0",
+    "@types/csurf": "^1.9.36",
     "@types/express": "^4.16.1",
     "@types/express-session": "^1.15.16",
+    "@types/jsonwebtoken": "^8.3.7",
     "@types/morgan": "^1.7.35",
     "@types/mysql2": "github:types/mysql2",
     "@types/passport": "^1.0.2",
     "@types/passport-local": "^1.0.33",
-    "node-ts": "^5.0.3",
-    "@types/jsonwebtoken": "^8.3.7",
+    "@typescript-eslint/eslint-plugin": "^2.10.0",
+    "@typescript-eslint/parser": "^2.10.0",
     "mysql2": "^1.6.5",
+    "node-ts": "^5.0.3",
     "nodemon": "^1.18.11",
     "standardx": "^5.0.0",
     "typescript": "^3.5.3"
