--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,17 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     ports:
       - 3306:3306
+  node:
+    build: ./backend
+    env_file:
+      - .env
+    ports:
+      - 8080:5000
+    user: "node"
+    volumes:
+      - ./backend/src:/home/node/app/src
+      - ./backend/tsconfig.json:/home/node/app/tsconfig.json
+
+
 volumes:
   passport-local:
