--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,23 @@
 */node_modules
 */.idea
 */.Ds_Store
+
+*/.pnp
+*/.pnp.js
+
+# testing
+*/coverage
+
+# production
+*/build
+
+# misc
+*/.DS_Store
+*/.env.local
+*/.env.development.local
+*/.env.test.local
+
+
+*/npm-debug.log*
+*/yarn-debug.log*
+*/yarn-error.log*
